# uploadserver

./: Cargo.toml  LICENSE  README.md  Rocket.toml  uploadServer.py
src/: main.rs
