[package]
name = "upload_server"
version = "0.1.0"
authors = ["Arpad Kovacs <minhmeoke@gmail.com>"]

[dependencies]
chrono = "0.4.0"
clap = "2.29.2"
rust-crypto = "0.2.36"
formdata = "0.12.2"
mime_guess = "1.8.3"
notify = "4.0.3"
pretty-bytes = "0.2.2"
rocket = "0.3.6"
rocket_codegen = "0.3.6"
rocket-file-cache = "1.0.0-beta"
time = "0.1.39"
