cargo-features = ["strip"]

[package]
name = "upload_server"
version = "0.1.0"
authors = ["Arpad Kovacs <akovacs@alumni.stanford.edu>"]
edition = "2015"

[dependencies]
chrono = "0.4.0"
clap = "2.29.2"
formdata = "0.12.2"
mime_guess = "1.8.3"
notify = "4.0.3"
pretty-bytes = "0.2.2"
rocket = "0.4.9"
rocket_codegen = "0.4.9"
rocket-basicauth = "1"
rust-crypto = "0.2.36"
time = "0.1.39"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = "fat"   # Optimize at link stage, removing dead code and reducing binary size.
              # Performs "fat" LTO which attempts to perform optimizations across all
              # crates within the dependency graph.
codegen-units = 1  # Reduce parallelism to allow maximum size reduction optimizations.

[target.x86_64-apple-darwin]
rustflags=["-C", "link-arg=-mmacosx-version-min=10.7"]
